welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:17: error: Unmatched closing brace '}' ignored here
}
^